--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.3",
+    "@emailjs/browser": "^4.1.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
