--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "photoswipe": "^5.4.4",
     "rxjs": "~7.8.0",
     "swiper": "^11.1.9",
     "tslib": "^2.3.0",
